data/synmetrix/base/manifests/actions.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synmetrix-actions
  labels:
    helm.sh/chart: synmetrix-0.1.0
    app.kubernetes.io/name: synmetrix
    app.kubernetes.io/instance: synmetrix
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: actions
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: synmetrix
    app.kubernetes.io/instance: synmetrix
    app.kubernetes.io/component: actions
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synmetrix-actions
  labels:
    helm.sh/chart: synmetrix-0.1.0
    app.kubernetes.io/name: synmetrix
    app.kubernetes.io/instance: synmetrix
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: actions
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: synmetrix
      app.kubernetes.io/instance: synmetrix
      app.kubernetes.io/component: actions
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synmetrix
        app.kubernetes.io/instance: synmetrix
        app.kubernetes.io/component: actions
    spec:
      serviceAccountName: synmetrix
      containers:
        - name: actions
          image: "quicklookup/synmetrix-actions:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
