data/synmetrix/base/manifests/cubejs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synmetrix-cubejs
  labels:
    app.kubernetes.io/name: synmetrix-cubejs
    app.kubernetes.io/instance: synmetrix

spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: http
      protocol: TCP
      name: http
    - port: 15432
      targetPort: pgsql
      protocol: TCP
      name: pgsql
    - port: 13306
      targetPort: mysql
      protocol: TCP
      name: mysql
  selector:
    app.kubernetes.io/name: synmetrix-cubejs
    app.kubernetes.io/instance: synmetrix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synmetrix-cubejs
  labels:
    app.kubernetes.io/name: synmetrix-cubejs
    app.kubernetes.io/instance: synmetrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: synmetrix-cubejs
      app.kubernetes.io/instance: synmetrix
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synmetrix-cubejs
        app.kubernetes.io/instance: synmetrix
    spec:
      serviceAccountName: synmetrix
      containers:
        - name: cubejs
          image: "quicklookup/synmetrix-cube:latest"
          imagePullPolicy: 
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
            - name: pgsql
              containerPort: 15432
              protocol: TCP
            - name: mysql
              containerPort: 13306
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /cube/conf
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: synmetrix-cubejs-pvc
