data/synmetrix/base/manifests/cubestore.yaml
apiVersion: v1
kind: Service
metadata:
  name: synmetrix-cubestore
  labels:
    helm.sh/chart: synmetrix-0.1.0
    app.kubernetes.io/name: synmetrix
    app.kubernetes.io/instance: synmetrix
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: cache-store
spec:
  type: ClusterIP
  ports:
    - port: 3030
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: synmetrix-cubestore
    app.kubernetes.io/instance: synmetrix
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synmetrix-cubestore
  labels:
    app.kubernetes.io/name: synmetrix-cubestore
    app.kubernetes.io/instance: synmetrix
spec:
  replicas: 1
  serviceName: synmetrix-cubestore
  selector:
    matchLabels:
      app.kubernetes.io/name: synmetrix-cubestore
      app.kubernetes.io/instance: synmetrix
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synmetrix-cubestore
        app.kubernetes.io/instance: synmetrix
    spec:
      serviceAccountName: synmetrix
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - growing-mouse
      containers:
        - name: cubestore
          image: "cubejs/cubestore:v0.35.33"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3030
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /cube/data
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: synmetrix-cubestore-pvc
