data/synmetrix/base/manifests/hasura-plus.yaml
apiVersion: v1
kind: Service
metadata:
  name: synmetrix-hasura-plus
spec:
  selector:
    app.kubernetes.io/name: synmetrix-hasura-plus
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synmetrix-hasura-plus
  namespace: synmetrix
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: synmetrix-hasura-plus
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-07-16T10:08:05Z"
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: synmetrix-hasura-plus
    spec:
      containers:
      - image: quicklookup/hasura-backend-plus:latest
        imagePullPolicy: Always
        name: hasura-plus
        ports:
        - containerPort: 3000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/ssl/certs/postgres-ca.crt
          name: postgres-ca-cert
          readOnly: true
          subPath: postgres-ca.crt
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: postgres-ca-cert
        name: postgres-ca-cert
