data/synmetrix/base/manifests/hasura.yaml
---
# Source: synmetrix/templates/hasura.yaml
apiVersion: v1
kind: Service
metadata:
  name: synmetrix-hasura
  labels:
    helm.sh/chart: synmetrix-0.1.0
    app.kubernetes.io/name: synmetrix
    app.kubernetes.io/instance: synmetrix
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: graphql
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: synmetrix
    app.kubernetes.io/instance: synmetrix
    app.kubernetes.io/component: graphql

---
# Source: synmetrix/templates/hasura.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synmetrix-hasura
  labels:
    helm.sh/chart: synmetrix-0.1.0
    app.kubernetes.io/name: synmetrix
    app.kubernetes.io/instance: synmetrix
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: graphql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: synmetrix
      app.kubernetes.io/instance: synmetrix
      app.kubernetes.io/component: graphql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synmetrix
        app.kubernetes.io/instance: synmetrix
        app.kubernetes.io/component: graphql
    spec:
      serviceAccountName: synmetrix
      
      containers:
        - name: hasura
          image: quicklookup/synmetrix-hasura:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
