data/synmetrix/base/manifests/ingress.yaml
---
# Source: synmetrix/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synmetrix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: synmetrix.contextsuite.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synmetrix-client
                port:
                  number: 80
          - path: /v1/graphql
            pathType: Prefix
            backend:
              service:
                name: synmetrix-hasura
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: synmetrix-cubejs
                port:
                  number: 4000
  tls:
    - hosts:
        - synmetrix.contextsuite.dev
      secretName: synmetrix-tls
---
